minor header fix - title center align

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ section {
   margin-right: 4em;
   order: 2;
   margin: .4em;
-  margin-left: -1.5em;
+  margin-left: -5.5em;
   margin-right: 2em;
 }
 
